# halo2-circuits-js

./: .gitignore  Cargo.toml  README.md  bootstrap.js  build.sh  index.html  next.config.js  package-lock.json  package.json  webpack.config.js
app/: page.js  worker.js
js/: index.js
rust/: Cargo.toml
rust/src/: lib.rs
src/: App.js  index.js  lib.rs
