[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
halo2-wasm = { git = "https://github.com/shreyas-londhe/halo2-browser.git", branch = "feat/wasm-instance", default-features = false }
wasm-bindgen = "0.2.87"

[features]
default=["rayon"]
rayon=["halo2-wasm/rayon"]